--- a/src/app/home/main/main.page.html
+++ b/src/app/home/main/main.page.html
@@ -1,44 +1,11 @@
-<!--<ion-content [color]="'secondary'">-->
-
-  <!--<div class="wrapper-all">-->
-
-    <!--<div class="option">-->
-      <!--<div class="icon">-->
-        <!--<ion-icon class="inner-icon" name="person"></ion-icon>-->
-      <!--</div>-->
-      <!--<div class="name">Perfil</div>-->
-    <!--</div>-->
-
-    <!--<div class="option">-->
-      <!--<div class="icon">-->
-        <!--<ion-icon class="inner-icon" name="globe"></ion-icon>-->
-      <!--</div>-->
-      <!--<div class="name">Global</div>-->
-    <!--</div>-->
-
-    <!--<div class="option">-->
-      <!--<div class="icon">-->
-        <!--<ion-icon class="inner-icon" name="school"></ion-icon>-->
-      <!--</div>-->
-      <!--<div class="name">Puntuar</div>-->
-    <!--</div>-->
-
-  <!--</div>-->
-
-<!--</ion-content>-->
 
 <ion-menu side="start" menuId="custom" class="my-custom-menu" contentId="custom">
-  <ion-header>
-    <ion-toolbar color="tertiary">
-      <ion-title>Custom Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
   <ion-content>
     <ion-list>
-      <ion-item [routerLink]="['/main/perfil']">Perfil</ion-item>
-      <ion-item [routerLink]="['/main/jugadas']">Jugadas</ion-item>
-      <ion-item [routerLink]="['/main/goles']">Goles</ion-item>
-      <ion-item [routerLink]="['/main/otros']">Otros</ion-item>
+      <ion-item class="menu-item" (click)="onCloseMenu()" routerLinkActive="active" [routerLink]="['/main/perfil']">Perfil</ion-item>
+      <ion-item class="menu-item" (click)="onCloseMenu()" routerLinkActive="active" [routerLink]="['/main/jugadas']">Jugadas</ion-item>
+      <ion-item class="menu-item" (click)="onCloseMenu()" routerLinkActive="active" [routerLink]="['/main/goles']">Goles</ion-item>
+      <ion-item class="menu-item" (click)="onCloseMenu()" routerLinkActive="active" [routerLink]="['/main/otros']">Otros</ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
