--- a/src/app/home/main/main.page.scss
+++ b/src/app/home/main/main.page.scss
@@ -20,81 +20,10 @@
   justify-content: space-evenly;
 }
 
-.option {
-  --option-height: 150px;
-  
-  height: var(--option-height);
-  max-height: 150px;
-  width: 100%;
-  max-width: 320px;
-
-  -webkit-border-radius: 75px;
-  -moz-border-radius: 75px;
-  border-radius: 75px;
-
-  background-color: white;
-  
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-
-  color: var(--ion-color-secondary);
-
-  cursor: pointer;
-}
-
-.option .icon {
-  width: var(--option-height);
-  height: 100%;
-  
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  color: var(--ion-color-secondary);
-
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-}
-
-.inner-icon {
-  font-size: calc(var(--option-height) / 2);
-}
-
-.option .name {
-  width: calc(100% - var(--option-height) - (var(--option-height) / 3));
-  max-width: calc(100% - var(--option-height) - (var(--option-height) / 3));
-
-  height: 100%;
-  max-height: 100%;
-
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-
-  font-size: calc(var(--option-height) / 4);
-
-  overflow: hidden;
-  -ms-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.option:not(:last-child) {
-  margin-bottom: var(--vertical-padding);
+.menu-item.active {
+  color: var(--ion-color-primary);
 }
 
 .my-custom-menu {
   --width: 500px;
-}
-
-.what {
-  width: 50%;
-  max-width: 50%;
-  
-  height: 50%;
-  max-height: 50%;
-
-  overflow: hidden;
 }
